<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="152dp"
            tools:layout_editor_absoluteY="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:fontFamily="@font/biorhyme_extralight"
                    android:gravity="center_horizontal"
                    android:text="@={slamBook.greeting}"
                    android:textAlignment="center"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="36sp"
                    android:ems="10"
                    android:fontFamily="@font/p5hatty"
                    android:text="@={slamBook.name}"
                    android:textColor="#000000"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:text="@={slamBook.nickname}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:text="@={slamBook.age}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/goodbye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:fontFamily="@font/montserrat"
                    android:text="@={slamBook.goodbye}"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/nameTitle"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameTitle" />

                <EditText
                    android:id="@+id/editName"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintName"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titleNickname"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleNickname" />

                <EditText
                    android:id="@+id/editNickname"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:ems="10"
                    android:hint="@string/hintNickname"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titleAge"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/titleAge" />

                <EditText
                    android:id="@+id/editText4"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/hintAge"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/titleBirthday"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/titleBirthday" />

                <EditText
                    android:id="@+id/editDate"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/hintBirthday"
                    android:inputType="date" />

                <TextView
                    android:id="@+id/titleCourse"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleCourse" />

                <EditText
                    android:id="@+id/editCourse"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintCourse"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titlePhone"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:ems="10"
                    android:text="@string/titleNumber" />

                <EditText
                    android:id="@+id/editPhone"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ems="10"
                    android:hint="@string/hintNumber"
                    android:inputType="phone" />

                <TextView
                    android:id="@+id/titleColor"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleColor" />

                <EditText
                    android:id="@+id/editColor"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintColor"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titleDream"
                    style="@style/marginTitle"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titleDream" />

                <EditText
                    android:id="@+id/editDream"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintDream"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titleCrush"
                    style="@style/marginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/titleCrush" />

                <EditText
                    android:id="@+id/editCrush"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hintCrush"
                    android:inputType="textPersonName" />

                <TextView
                    android:id="@+id/titleMsg"
                    style="@style/marginTitle"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:text="@string/titleMsg" />

                <EditText
                    android:id="@+id/editMsg"
                    style="@style/margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/done_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/done" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <data>
        <variable
            name="slamBook"
            type="com.example.bernabe_exer4_slambook.SlamBook" />
    </data>

</layout>
